# tradefair-system

./: .coverage  .gitignore  NOTES.md  README.md  pyproject.toml  requirements-dev.txt
api/: main.py
api/models/: admin.py  admins_tradefairs.py  attendence.py  booth.py  client.py  exhibitor.py  product.py  role.py  roles_users.py  tradefair.py  user.py
api/routers/: user.py
api/schemas/: exhibitor.py
app/: main.py
app/api/: connection.py  main.py  settings.py
app/api/models/: admin.py  admins_tradefairs.py  attendence.py  booth.py  client.py  exhibitor.py  product.py  role.py  roles_users.py  tradefair.py  user.py
app/api/routers/: user.py
app/api/schemas/: exhibitor.py
app/models/: admin.py  admins_tradefairs.py  attendence.py  booth.py  client.py  exhibitor.py  product.py  registry.py  role.py  roles_users.py  tradefair.py  user.py
app/routers/: user.py
app/schemas/: exhibitor.py  user.py
app/tests/: testSettings.py  test_introduction.py
docs/: physical-model.sql
fast_zero/: app.py
migrations/: env.py
migrations/versions/: 54fb8d03ff61_create_user_table.py  621d4cea6d53_create_user_and_exhibitor_tables.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_token.py  test_user.py
tradefair_system/: app.py  database.py  models.py  security.py  settings.py
tradefair_system/models/: product.py  user.py
tradefair_system/routers/: auth.py  product.py  token.py  user.py
tradefair_system/schemas/: user.py  utils.py
